--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "opacity": [1, 0.9, 0.8, 0.7, 0.6, 0.5, 0.4, 0.3, 0.2, 0.1, 0.025, 0],
+    "spacing": [0.25, 0.5, 1, 2, 4, 8, 16],
     "colors": {
         "black": "#000",
         "white": "#fff"
