--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "opacity": [1, 0.9, 0.8, 0.7, 0.6, 0.5, 0.4, 0.3, 0.2, 0.1, 0.025, 0],
     "spacing": [0.25, 0.5, 1, 2, 4, 8, 16],
+    "borderWidths": [0, 0.125, 0.25, 0.5, 1, 2],
     "colors": {
         "black": "#000",
         "white": "#fff"
